force-app/main/default/objects/Student__c/fields/Grade_Status__c.field-meta.xml
<CustomField>
    <fullName>Grade_Status__c</fullName>
    <label>Grade Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>