force-app/main/default/objects/Student__c/fields/IEP_Flag__c.field-meta.xml
<CustomField>
    <fullName>IEP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IEP Flag</label>
    <type>Checkbox</type>
</CustomField>