force-app/main/default/objects/Student__c/fields/Primary_Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Guardian_Contact__c</fullName>
    <label>Primary Guardian Contact</label>
    <type>Phone</type>
</CustomField>