force-app/main/default/objects/Student__c/fields/Primary_Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Guardian_Name__c</fullName>
    <label>Primary Guardian Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>