force-app/main/default/objects/Student__c/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>School__c</columns>
    <columns>Grade_Status__c</columns>
    <columns>IEP_Flag__c</columns>
    <columns>Primary_Guardian_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Students</label>
</ListView>